He terminado el header de la pagina

--- a/index.html
+++ b/index.html
@@ -10,7 +10,57 @@
 </head>
 
 <body>
-
+    <div class="wrapped">
+        <header>
+            <div class="nav-top">
+                <div class="container">
+                    <div>
+                        <a href="">
+                            <i class="fas fa-envelope"></i>
+                            <span>rovers@gmail.com</span>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="">
+                            <i class="fas fa-phone"></i>
+                            <span>91-634 40 49</span>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="">
+                            <i class="fas fa-shopping-cart"></i>
+                            <span>Carrito</span>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="">
+                            <i class="fas fa-user-circle"></i>
+                            <span>Usuario</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <nav>
+                <div class="container">
+                    <figure>
+                        <a href="index.html">
+                            <img src="./images/logo.jpg" alt="Hamburgueseria Rover´s">
+                        </a>
+                    </figure>
+                    <div class="hamburguesa">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
+                    <ul class="menu">
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="menu.html">Menu</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+    </div>
 </body>
 
 </html>
