--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hamburgueseria Rover</title>
+    <title>
+        <Menu>Menu</Menu>
+    </title>
 
     <link rel="stylesheet" href="./css/style.css">
 </head>
