--- a/index.html
+++ b/index.html
@@ -81,7 +81,36 @@
         </div>
 
         <main>
-
+            <section id="services">
+                <h2>Our <span>Services</span></h2>
+                <div class="underline">
+                    <hr noshade="noshade">
+                    <span>X</span>
+                </div>
+                <div class="grid">
+                    <article>
+                        <div><i class="fas fa-cogs"></i></div>
+                        <h3>1. Carne 100% Natural</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum libero sapiente est laudantium
+                            placeat at. Suscipit quisquam quod hic dolores!</p>
+                        <a href="" class="enlace">Leer más <i class="fas fa-long-arrow-alt-right"></i></a>
+                    </article>
+                    <article>
+                        <div><i class="fas fa-cogs"></i></div>
+                        <h3>2. Cocina Moderna</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum libero sapiente est laudantium
+                            placeat at. Suscipit quisquam quod hic dolores!</p>
+                        <a href="" class="enlace">Leer más <i class="fas fa-long-arrow-alt-right"></i></a>
+                    </article>
+                    <article>
+                        <div><i class="fas fa-cogs"></i></div>
+                        <h3>3. Servicio Impecable</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum libero sapiente est laudantium
+                            placeat at. Suscipit quisquam quod hic dolores!</p>
+                        <a href="" class="enlace">Leer más <i class="fas fa-long-arrow-alt-right"></i></a>
+                    </article>
+                </div>
+            </section>
         </main>
 
         <footer>
