He terminado de maquetar la seccion About de la pagina principal

--- a/index.html
+++ b/index.html
@@ -82,33 +82,72 @@
 
         <main>
             <section id="services">
-                <h2>Our <span>Services</span></h2>
-                <div class="underline">
-                    <hr noshade="noshade">
-                    <span>X</span>
+                <div class="container">
+                    <h2>Our <span>Services</span></h2>
+                    <div class="underline">
+                        <hr noshade="noshade">
+                        <span>X</span>
+                    </div>
+                    <div class="grid">
+                        <article>
+                            <div><i class="fas fa-cogs"></i></div>
+                            <h3>1. Carne 100% Natural</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum libero sapiente est
+                                laudantium
+                                placeat at. Suscipit quisquam quod hic dolores!</p>
+                            <a href="" class="enlace">Leer más <i class="fas fa-long-arrow-alt-right"></i></a>
+                        </article>
+                        <article>
+                            <div><i class="fas fa-truck"></i></div>
+                            <h3>2. Cocina Moderna</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum libero sapiente est
+                                laudantium
+                                placeat at. Suscipit quisquam quod hic dolores!</p>
+                            <a href="" class="enlace">Leer más <i class="fas fa-long-arrow-alt-right"></i></a>
+                        </article>
+                        <article>
+                            <div><i class="fas fa-heart"></i></div>
+                            <h3>3. Servicio Impecable</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum libero sapiente est
+                                laudantium
+                                placeat at. Suscipit quisquam quod hic dolores!</p>
+                            <a href="" class="enlace">Leer más <i class="fas fa-long-arrow-alt-right"></i></a>
+                        </article>
+                    </div>
                 </div>
-                <div class="grid">
-                    <article>
-                        <div><i class="fas fa-cogs"></i></div>
-                        <h3>1. Carne 100% Natural</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum libero sapiente est laudantium
-                            placeat at. Suscipit quisquam quod hic dolores!</p>
-                        <a href="" class="enlace">Leer más <i class="fas fa-long-arrow-alt-right"></i></a>
-                    </article>
-                    <article>
-                        <div><i class="fas fa-cogs"></i></div>
-                        <h3>2. Cocina Moderna</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum libero sapiente est laudantium
-                            placeat at. Suscipit quisquam quod hic dolores!</p>
-                        <a href="" class="enlace">Leer más <i class="fas fa-long-arrow-alt-right"></i></a>
-                    </article>
-                    <article>
-                        <div><i class="fas fa-cogs"></i></div>
-                        <h3>3. Servicio Impecable</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum libero sapiente est laudantium
-                            placeat at. Suscipit quisquam quod hic dolores!</p>
-                        <a href="" class="enlace">Leer más <i class="fas fa-long-arrow-alt-right"></i></a>
-                    </article>
+            </section>
+
+            <section id="about">
+                <div class="container">
+                    <h2>About <span>Us</span></h2>
+                    <div class="underline">
+                        <hr noshade="noshade">
+                        <span>X</span>
+                    </div>
+                    <div class="flex">
+                        <figure>
+                            <div class="imagen">
+                                <div class="marco">
+                                    <img src="./images/about-main.jpg" alt="">
+                                </div>
+                            </div>
+                        </figure>
+
+                        <div>
+                            <h3>The History</h3>
+                            <h4>Our Restaurant</h4>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt, assumenda tempore
+                                impedit
+                                ipsa officia voluptatibus incidunt labore! Architecto, quisquam maxime.</p>
+
+                            <div>
+                                <a href="" class="boton">Leer más
+                                    <i class="fas fa-long-arrow-alt-right"></i>
+                                </a>
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
             </section>
         </main>
