He creado la seccion del blog

--- a/blog.html
+++ b/blog.html
@@ -62,7 +62,45 @@
         </header>
 
         <main>
+            <section id="about">
+                <div class="container">
+                    <h2>Our <span>Blogs</span></h2>
+                    <div class="underline">
+                        <hr noshade="noshade">
+                        <span>X</span>
+                    </div>
 
+                    <div class="grid">
+                        <article>
+                            <figure>
+                                <img src="./images/news3.jpg" alt="">
+                            </figure>
+                            <h3>Our Weekly Best Foods</h3>
+                            <h4>Posted by Rovers</h4>
+                            <p>lorem15</p>
+                            <a href="">Reed more</a>
+                        </article>
+                        <article>
+                            <figure>
+                                <img src="./images/news4.jpg" alt="">
+                            </figure>
+                            <h3>top Five Reasons To Visit</h3>
+                            <h4>Posted by Rovers</h4>
+                            <p>lorem15</p>
+                            <a href="">Reed more</a>
+                        </article>
+                        <article>
+                            <figure>
+                                <img src="./images/news1.jpg" alt="">
+                            </figure>
+                            <h3>Restaurant´s Inside Design</h3>
+                            <h4>Posted by Rovers</h4>
+                            <p>lorem15</p>
+                            <a href="">Reed more</a>
+                        </article>
+
+                    </div>
+            </section>
         </main>
 
         <footer>
